Fixed image upload, register sends to server

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
                 <div class="template-divider"></div>
                 <div class="form-input-container">
                     <label for="athlete-img" class="form-label">Image:</label>
-                    <input type="file" id="athlete-img" name="athlete" accept="image/jpeg, image/png" onchange="changeImage(this)">
+                    <input type="file" id="athlete-img" name="athlete" accept="image/jpeg, image/png" onchange="changeImage(event)">
                     <label for="athlete-name" class="form-label">Athlete Name:</label>
                     <input type="text" id="athlete-name" name="athlete-name">
                     <button type="button" id="submit-athlete-name" onclick="changeText()" class="submit-form">Submit</button>
