--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,6 +12,7 @@
 html {
     font-family: sans-serif;
     box-sizing: border-box;
+    width: 100%;
 }
 
 body {
@@ -20,10 +21,15 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    overflow: scroll;
+    overflow-x: hidden;
 }
 
 #main-header {
+    z-index: 2;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -48,8 +54,9 @@ nav {
     flex-direction: row;
     justify-content: space-between;
     flex-basis: 30%;
-    min-width: 400px;
+    min-width: 300px;
     align-items: center;
+    margin-right: 50px;
 }
 
 nav a {
@@ -135,6 +142,8 @@ nav li {
 
 .img-container {
     height: 475px;
+    min-height: 475px;
+    min-width: 300px;
 }
 
 #athlete-img {
@@ -169,6 +178,7 @@ nav li {
 .template-img {
     border: 10px solid var(--border-color);
     width: 300px;
+    height: 475px;
     border-radius: 8px;
     box-shadow: 5px 5px 5px #cccccc;
 }
