--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,10 +54,14 @@
             </form>
         </div>
 
-        <div class="img-container">
-            <img class="template-img" src="../img/img-placeholder.jpg" alt="a picture of an athlete" name="athlete-img" id="placeholder-img">
-            <div class="img-banner" id="img-banner">Athlete Name</div>
-            <img class="mascot-img" src="../img/bird.svg" name="mascot-img" id="mascot-img">
+        <div class="save-img-container">
+            <div class="img-container" id="img-container">
+                <img class="template-img" src="../img/img-placeholder.jpg" alt="a picture of an athlete" name="athlete-img" id="placeholder-img">
+                <div class="img-banner" id="img-banner">Athlete Name</div>
+                <img class="mascot-img" src="../img/bird.svg" name="mascot-img" id="mascot-img">
+            </div>
+            <input type="button" id="save-front" class="submit-form" value="Save" onclick="saveFront()"></input>
+            <img class="screenshot" id="frontScreenshot_output" />
         </div>
     </div>
 
