--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,7 @@
 
 <div class="register-container">
     <h1>Register</h1>
-    <form action="/register" method="POST" class="register-form">
+    <form action="/api" method="POST" class="register-form">
         <div class="register-name">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" required>
