--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,6 +2,10 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
+<header id="main-header">
+    <h1 id="main-header-text">Card Editor</h1>
+</header> 
+
 <div class="register-container">
     <h1>Register</h1>
     <form action="/register" method="POST" class="register-form">
@@ -20,5 +24,9 @@
         <button type="submit" class="submit-form register-submit">Register</button>
     </form>
     <a href="/login">Login</a>
-    <a href="/">Cancel</a>
+    <a href="/about">Cancel</a>
 </div>
+
+<footer class="footer">
+    <p>Erin Bruner</p>
+</footer>
