--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -244,6 +244,13 @@ nav li {
 
 #stats {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.stats-box {
+    display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
@@ -286,7 +293,7 @@ nav li {
 }
 
 .stat-input-submit {
-    padding: 20px;
+    padding: 0 20px;
 }
 
 .submit-form:hover {
@@ -367,6 +374,7 @@ th {
     background-color:rgb(214, 214, 214);
     display: flex;
     justify-content: center;
+    z-index: 2;
 }
 
 #tbody {
@@ -387,6 +395,8 @@ th {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100vw;
+    height: 100vh;
 }
 
 .login-form {
@@ -440,4 +450,53 @@ th {
 .screenshot {
     width: 150px;
     height: 150px;
+}
+
+.stats-to-db {
+    margin-bottom: 0;
+    margin-left: auto;
+}
+
+#about-sign-in {
+    margin-left: auto;
+}
+
+.get-started-submit {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;
+    box-shadow: none;
+    width: 150px;
+    height: 50px;
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+    justify-self: flex-end;
+}
+
+.get-started-container {
+    display: flex;
+    flex-direction: column;
+}
+
+#fromDB {
+    width: 100px;
+    height: 20px;
+    align-self: center;
+}
+
+.fromDB-container {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: row;
+    border: 1px dotted blue;
+    margin: auto;
+    align-self: center;
 }
