--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,8 +28,8 @@ body {
     z-index: 2;
     overflow: hidden;
     position: fixed;
-    top: 0;
     width: 100%;
+    top: 0;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -293,7 +293,13 @@ nav li {
 }
 
 .stat-input-submit {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
     padding: 0 20px;
+    margin-top: 10px;
 }
 
 .submit-form:hover {
@@ -320,7 +326,7 @@ nav li {
     align-items: center;
     gap: 30px;
     margin: 0;
-    padding: 50px;
+    padding-bottom: 50px;
     flex: 1;
     width: 100%;
 }
@@ -375,6 +381,7 @@ th {
     display: flex;
     justify-content: center;
     z-index: 2;
+    width: 100%;
 }
 
 #tbody {
@@ -487,16 +494,25 @@ th {
     align-self: center;
 }
 
-.fromDB-container {
+#fromDB-form {
     display: flex;
     flex-direction: row;
     gap: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
-.button-container {
+#findYear {
+    height: 20px;
+    width: 70px;
+}
+
+.stat-submit-button {
+    height: 50px;
+}
+
+.row-delete-container {
     display: flex;
-    flex-direction: row;
-    border: 1px dotted blue;
-    margin: auto;
-    align-self: center;
+    flex-direction: column;
+    align-items: center;
 }
