--- a/views/index.ejs
+++ b/views/index.ejs
@@ -123,9 +123,9 @@
             </div>
 
             <div class="fromDB-container">
-                <form id="fromDB-form" method="POST" action="get-stats">
+                <form id="fromDB-form">
                     <input type="text" id="findYear" placeholder="Enter year" name="findYear">
-                    <button type="submit" class="submit-form stats-to-db" id="submit-to-db" onclick="fetchData()">Pull from database</button>
+                    <button type="submit" class="submit-form stats-to-db" id="submit-to-db">Pull from database</button>
                 </form>
             </div>
             <div class="stat-input-submit">
@@ -185,8 +185,6 @@
             </div>
         </div>
     </div>
-
-    <button onclick="fetchData()">Press</button>
 
 <script src="js/index.js"></script>
 </body>
